criando vagas html e css e melhorando a doc

--- a/index.html
+++ b/index.html
@@ -41,26 +41,80 @@
     <section class="container__metricas">
         <div class="metricas">
             <h2 class="metricas__titulo">400+</h2>
-            <h3 class="metricas__subtitulos">Projetos concluídos</h3>
+            <p class="metricas__subtitulos">Projetos concluídos</p>
             <p class="metricas__texto">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
         </div>
 
         <div class="metricas">
             <h2 class="metricas__titulo">100+</h2>
-            <h3 class="metricas__subtitulos">Colaboradores</h3>
+            <p class="metricas__subtitulos">Colaboradores</p>
             <p class="metricas__texto">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
         </div>
 
         <div class="metricas">
             <h2 class="metricas__titulo">20k</h2>
-            <h3 class="metricas__subtitulos">Downloads</h3>
+            <p class="metricas__subtitulos">Downloads</p>
             <p class="metricas__texto">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
         </div>
 
         <div class="metricas">
             <h2 class="metricas__titulo">500+</h2>
-            <h3 class="metricas__subtitulos">Reviews 5 estrelas</h3>
+            <p class="metricas__subtitulos">Reviews 5 estrelas</p>
             <p class="metricas__texto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+        </div>
+    </section>
+
+    <section class="vagas">
+        <div class="container__vagas">
+            <p class="vagas__subtitulo">Vagas abertas!</p>
+            <h2 class="vagas__titulo">Estamos procurando por talentos</h2>
+            <p class="vagas__texto">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p> 
+        </div>
+        <img src="assets/img/Image.svg" alt="Imagem da equipe optimustech" class="vagas__imagem">
+
+        <div class="container__card">
+
+                <h2 class="card__titulo">Design</h2>
+                <div  class="card__itens">
+                    <h3 class="card__vaga">Product Designer</h3>  
+                    <div class="descricao">
+                        <p class="card__texto">Full-time</p>  
+                        <p class="card__texto">Faixa salarial: R$7.000</p>
+                    </div>   
+                </div>
+
+                <div  class="card__itens">
+                    <h3 class="card__vaga">UX Designer</h3>    
+                    <div class="descricao">
+                        <p class="card__texto">Full-time</p>  
+                        <p class="card__texto">Faixa salarial: R$6.000</p>  
+                    </div>  
+                </div>
+
+                <h2 class="card__titulo">Desenvolvimento de Software</h2>
+                <div  class="card__itens">
+                    <h3 class="card__vaga">Desenvolvedor(a) iOS</h3> 
+                    <div class="descricao">
+                        <p class="card__texto">Full-time</p>  
+                        <p class="card__texto">Faixa salarial: R$8.000</p>  
+                    </div>     
+                </div>
+
+                <div  class="card__itens">
+                    <h3 class="card__vaga">Desenvolvedor(a) Front-end</h3>
+                    <div class="descricao">
+                        <p class="card__texto">Full-time</p>  
+                        <p class="card__texto">Faixa salarial: R$7.000</p>  
+                    </div>      
+                </div>
+
+                <div  class="card__itens">
+                    <h3 class="card__vaga">Desenvolvedor(a) Back-end</h3>   
+                    <div class="descricao">
+                        <p class="card__texto">Full-time</p>  
+                        <p class="card__texto">Faixa salarial: R$8.000</p>  
+                    </div>   
+                </div>
         </div>
     </section>
 
