doc melhor o meu html e criando o meu depoimento

--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
                 <div  class="card__itens">
                     <h3 class="card__vaga">Product Designer</h3>  
                     <div class="descricao">
-                        <p class="card__texto">Full-time</p>  
-                        <p class="card__texto">Faixa salarial: R$7.000</p>
+                        <span class="card__texto">Full-time</span>  
+                        <span class="card__texto">Faixa salarial: R$7.000</span>
                     </div>   
                 </div>
 
                 <div  class="card__itens">
                     <h3 class="card__vaga">UX Designer</h3>    
                     <div class="descricao">
-                        <p class="card__texto">Full-time</p>  
-                        <p class="card__texto">Faixa salarial: R$6.000</p>  
+                        <span class="card__texto">Full-time</span>  
+                        <span class="card__texto">Faixa salarial: R$6.000</span>  
                     </div>  
                 </div>
 
@@ -95,27 +95,35 @@
                 <div  class="card__itens">
                     <h3 class="card__vaga">Desenvolvedor(a) iOS</h3> 
                     <div class="descricao">
-                        <p class="card__texto">Full-time</p>  
-                        <p class="card__texto">Faixa salarial: R$8.000</p>  
+                        <span class="card__texto">Full-time</span>  
+                        <span class="card__texto">Faixa salarial: R$8.000</span>  
                     </div>     
                 </div>
 
                 <div  class="card__itens">
                     <h3 class="card__vaga">Desenvolvedor(a) Front-end</h3>
                     <div class="descricao">
-                        <p class="card__texto">Full-time</p>  
-                        <p class="card__texto">Faixa salarial: R$7.000</p>  
+                        <span class="card__texto">Full-time</span>  
+                        <span class="card__texto">Faixa salarial: R$7.000</span>  
                     </div>      
                 </div>
 
                 <div  class="card__itens">
                     <h3 class="card__vaga">Desenvolvedor(a) Back-end</h3>   
                     <div class="descricao">
-                        <p class="card__texto">Full-time</p>  
-                        <p class="card__texto">Faixa salarial: R$8.000</p>  
+                        <span class="card__texto">Full-time</span>  
+                        <span class="card__texto">Faixa salarial: R$8.000</span>  
                     </div>   
                 </div>
         </div>
+    </section>
+
+    <section class="depoimento">
+        <h2 class="depoimento__titulo">Veja o que nossos colaboradores falam sobre nós</h2>
+        <h3 class="depoimento__subtitulo">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h3>
+        <img src="assets/img/Avatar.svg" alt="Foto de perfil da julia" class="imagem__depoimento">
+        <p class="depoimento__texto-nome">Siso Matheus</p>
+        <p class="depoimento__texto">Desenvolvedor Web</p>
     </section>
 
 </body>
