criando rodape e finalizando o site

--- a/index.html
+++ b/index.html
@@ -126,5 +126,12 @@
         <p class="depoimento__texto">Desenvolvedor Web</p>
     </section>
 
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Acompanhe as nossas oportunidades</h2>
+        <p class="rodape__texto">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        <input type="email" placeholder="Seu e-mail" class="email">
+        <button class="rodape__botao">Cadastrar</button>
+        <p class="texto__copy">&#169 2022 OptimusTech. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
