att alt imagem siso

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <section class="depoimento">
         <h2 class="depoimento__titulo">Veja o que nossos colaboradores falam sobre nós</h2>
         <h3 class="depoimento__subtitulo">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h3>
-        <img src="assets/img/Avatar.svg" alt="Foto de perfil da julia" class="imagem__depoimento">
+        <img src="assets/img/Avatar.svg" alt="Foto de perfil do siso" class="imagem__depoimento">
         <p class="depoimento__texto-nome">Siso Matheus</p>
         <p class="depoimento__texto">Desenvolvedor Web</p>
     </section>
